--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -30,4 +30,6 @@ jobs:
         run: npm run test
 
       - name: Run E2E tests
-        run: npm run test:e2e
+        run: |
+          npx playwright install
+          npm run test:e2e
